# Zero-ADK

./: README.md  pyproject.toml  requirements.txt
docs/: ADK-PYTHON-DEV-HANDOFF.md
examples/: basic_agent_example.py  multi_agent_example.py
src/adk_alpha/: __init__.py  agents.py  config.py  tools.py
tests/: __init__.py  test_agents.py  test_config.py  test_tools.py
