[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adk-alpha"
dynamic = ["version", "description"]
authors = [{name = "ADK Alpha Team", email = "adk-alpha@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.4.1",
    "google-genai",
    "google-cloud-aiplatform",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "opentelemetry-api",
    "click",
    "structlog",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "pyink",
    "isort",
    "mypy",
]
advanced = [
    "anthropic",
    "langchain-community",
    "beautifulsoup4",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
]

[tool.flit.module]
name = "adk_alpha"

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.isort]
profile = "google"
line_length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
